--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
 <h1><%= @user.username %></h1>
 
 <p><%= @user.email %></p>
+
+<h2>Tasks<h2>
+<% @user.debts.each do |debt| %>
+	<%= debt.description %>
+	<%= debt.category %>
+	<%= debt.is_fulfilled %>
+<% end %>
