--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <%= render "layouts/navbar" %>
+  <p class="notice"><%= notice if notice%></p>
+  <p class="alert"><%= alert if alert %></p>
 <%= yield %>
 
 </body>
