--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,13 +5,13 @@
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to "Home", root_path, class: "nav-text" %></li>
         <li><%= link_to "About", static_pages_about_path, class: "nav-text" %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle nav-text" data-toggle="dropdown" role="button" aria-expanded="false">The Team <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="https://devpointlabs.slack.com/team/craig10n" target="_blank">Craig</a></li>
-            <li><a href="https://devpointlabs.slack.com/team/annenichols" target="_blank">Ann</a></li>
-            <li><a href="https://devpointlabs.slack.com/team/kuddox" target="_blank">Khuong</a></li>
-          </ul>
+        <% if user_signed_in? %>
+          <li><%= link_to "Profile", user_path(current_user), class: "nav-text" %></li>
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-text" %></li>
+        <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path, class: "nav-text" %></li>
+          <li><%= link_to "Log In", new_user_session_path, class: "nav-text" %></li>
+        <% end %>
         </li>
       </ul>
     </nav>
