--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,14 @@
 
 <p><%= @user.email %></p>
 
-<h2>Tasks<h2>
+<%= link_to 'Edit User', edit_user_registration_path %>
+<%= link_to 'New Debt', new_user_debt_path(@user) %>
+
+<h2>Debts<h2>
 <% @user.debts.each do |debt| %>
 	<%= debt.description %>
 	<%= debt.category %>
 	<%= debt.is_fulfilled %>
+	<%= link_to 'Edit', edit_user_debt_path(@user, debt) %>
+	<%= link_to 'Delete', user_debt_path(@user, debt), method: :delete %>
 <% end %>
