--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container page-top">
+    <%= image_tag "sneaky-squid-logo-blue.png", class: "navbar-brand logo" %>
     <%= link_to "SquidProQuo", root_path, class: "navbar-brand" %>
     <nav>
       <ul class="nav navbar-nav pull-right">
