--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,23 @@
-<h1><%= @user.username %></h1>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.username %>
+				<%= @user.email %>
+      </h1>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <% if @user.debts.any? %>
+      <% @user.debts.each do |debt| %>
+				<%= debt.description %>
+				<%= debt.category %>
+				<%= debt.is_fulfilled %>
+				<%= link_to 'Edit', edit_user_debt_path(@user, debt) %>
+				<%= link_to 'Delete', user_debt_path(@user, debt), method: :delete %>
+			<% end %>
+    <% end %>
+  </div>
+</div>
 
-<p><%= @user.email %></p>
-
-<%= link_to 'Edit User', edit_user_registration_path %>
-<%= link_to 'New Debt', new_user_debt_path(@user) %>
-
-<h2>Debts<h2>
-<% @user.debts.each do |debt| %>
-	<%= debt.description %>
-	<%= debt.category %>
-	<%= debt.is_fulfilled %>
-	<%= link_to 'Edit', edit_user_debt_path(@user, debt) %>
-	<%= link_to 'Delete', user_debt_path(@user, debt), method: :delete %>
-<% end %>
