added -lender field

--- a/app/views/debts/edit.html.erb
+++ b/app/views/debts/edit.html.erb
@@ -6,6 +6,9 @@
 	<%= f.label :category %>
 	<%= f.text_field :category %>
 
+	<%= f.label :lender %>
+	<%= f.text_field :lender %>
+
 	<%= f.label :is_fulfilled %>
 	<%= f.check_box :is_fulfilled %>
 
