changes to the AboutUs page.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,17 @@
-<h1>About Us</h1>
-<p>We are SquidProQuo.</p>
+<h1>ABOUT US</h1>
+<p>We are SquidProQuo. An app where you keep track of all of your IOUs with your friends and loved ones.</p>
+<br><br>
+
+<h3>THE SQUID TEAM</h3>
+
+<h4>Project Manager: Anne Nichols</h4>
+<%= image_tag "happy-female-squid.jpg", class:"squidimg" %><br>
+<p>Duties: User Model/Controller, CSS</p><br>
+
+<h4>The Pretty One: Craig Nielson</h4>
+<%= image_tag "smile-squidward.png", class:"squidimg" %><br>
+<p>Duties: Home Page, Styling, other tasks.</p><br>
+
+<h4>The Asian One: Khuong Dang</h4>
+<%= image_tag "other-squidward.jpg", class:"squidimg2" %><br>
+<p>Duties: Debt Model/Controller, About Us</p>
