--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,6 +54,7 @@ body {
 	background-color: #E4E0D4;
 	.btn {
 		background-color: #E27F2E;
+		border-color: #E27F2E;
 	}
 }
 
@@ -61,6 +62,7 @@ body {
 	width: 75%;
 	th {
 		font-size: 1.5em;
+		text-align: center;
 	}
 	td {
 		font-size: 1.25em;
@@ -73,4 +75,28 @@ body {
 
 .table-header {
 	text-align: center;
+}
+
+h4 {
+	padding-top: 10px;
+	font-size: 1.5em;
+}
+
+.user-list {
+	font-size: 0.75em;
+	padding-bottom: 10px;
+	list-style: none;
+}
+
+.user-button {
+	background-color: #45629C;
+	border-color: #5C5B59;
+}
+
+.user-button-spacing {
+	padding-top: 10px;
+}
+
+label {
+	font-size: 1.5em;
 }
