--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,6 +8,7 @@
         <li><%= link_to "About", static_pages_about_path, class: "nav-text" %></li>
         <% if user_signed_in? %>
           <li><%= link_to "Profile", user_path(current_user), class: "nav-text" %></li>
+          <li><%= link_to "Users", users_path, class: "nav-text" %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-text" %></li>
         <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path, class: "nav-text" %></li>
