--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,8 @@
       <h3>
 				<%= @user.email %>
 			</h3>
+			<h4><%= link_to 'New Debt', new_user_debt_path(@user), class: "btn btn-success btn-lg user-button" %></h4>
+			<h4><%= link_to 'Edit Profile', edit_user_registration_path, class: "btn btn-success btn-lg user-button" %></h4>
     </section>
   </aside>
 
@@ -37,6 +39,3 @@
 		</tbody>
 	</table>
 </div>
-
-	<%= link_to 'New Debt', new_user_debt_path(@user), class: "user-links" %>
-	<%= link_to 'Edit Profile', edit_user_registration_path, class: "user-links" %>
