--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
 
 $navbar-height: 100px;
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(//fonts.googleapis.com/css?family=Montserrat);
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
