--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,7 @@
 			</tbody>
 		</table>
 	  <%= hidden_field_tag 'user_id', @user.id %>
-	  <%= submit_tag "Remove Debt", class: "btn btn-default" %>
+	  <%= submit_tag "Remove Debt", class: "btn btn-success btn-lg remove-button" %>
 	<% end %>
 	</div>
 </div>
