--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     <nav>
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to "Home", root_path, class: "nav-text" %></li>
-        <li><%= link_to "About", static_pages_about_path, class: "nav-text" %></li>
+        <li><%= link_to "About", about_path, class: "nav-text" %></li>
         <% if user_signed_in? %>
           <li><%= link_to "Profile", user_path(current_user), class: "nav-text" %></li>
           <li><%= link_to "Users", users_path, class: "nav-text" %></li>
