Updated About Us page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,10 @@
 <h1>ABOUT US</h1>
-<p>We are SquidProQuo. An app where you keep track of all of your IOUs with your friends and loved ones.</p>
-<br><br>
+<h4>Friends are great. They pay for coffee.  They pick up the tab when you're out on the town and short on cash.  They may even help you move--if you're lucky.  Hey, they're your friends so they're happy to get your back. But just in case you want to keep track of they've bought you, so you can pay 'em back, or just get 'em back the next time around, SquidProQuo can help. or</p><p>We are SquidProQuo, an app where you keep track of all of your IOUs.  It's free.  It's easy.  And it's a nice way to return the kindness of your friends and loved ones</h4>
+<br>
+<center><h4><b>SquidProQuo:</b> <i>Let's get squiddin'.</i></h4></center>
+<br>
 
-<h3>THE SQUID TEAM</h3>
+<h2><center>THE SQUID TEAM</center></h2>
 
 <h4>Project Manager: Anne Nichols</h4>
 <%= image_tag "happy-female-squid.jpg", class:"squidimg" %><br>
